[package]
name = "gfx-memory"
version = "0.2.0"
authors = [
	"omni-viral <scareaangel@gmail.com>",
	"The Gfx-rs Developers",
]
edition = "2018"
repository = "https://github.com/gfx-rs/gfx-extras"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gfx-descriptor"
keywords = ["graphics", "gfx-hal"]
categories = ["rendering"]
description = "gfx-hal memory allocator"

[features]

[dependencies]
bit-set = "0.5"
fxhash = "0.2"
hal = { package = "gfx-hal", version = "0.6" }
log = "0.4"
slab = "0.4"

[dev-dependencies]
rand = "0.7"
